[package]
name = "www"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "websvr"
path = "src/www.rs"

[[bin]]
name = "inference"
path = "src/inferer.rs"

[dependencies]
log = "0.4.17"
axum = "0.6.1"
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }